storeit_macros/tests/ui/fail/repository_unknown_nv.stderr
error: Unknown attribute
 --> tests/ui/fail/repository_unknown_nv.rs:7:29
  |
7 | #[repository(entity = User, bekkend = Libsql)]
  |                             ^^^^^^^
